<?xml version = "1.0" encoding = "utf-8"?>
<LinearLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:tools = "http://schemas.android.com/tools"
    android:layout_width = "match_parent"
    android:layout_height = "match_parent"
    android:orientation = "vertical"
    android:padding="20dp"
    android:background="@drawable/background"
    tools:context = ".MainActivity">
    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/fill_registration_form"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/colorblack"
        android:gravity="center"/>
    <EditText
        android:id="@+id/edit1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/back"
        android:paddingStart="20sp"
        android:hint="@string/first_name"
        android:inputType="textShortMessage"
        android:textColorHighlight="@color/coloraccent"
        android:paddingLeft="20sp" />

    <EditText
        android:id="@+id/edit2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/back"
        android:paddingStart="20sp"
        android:hint="@string/sur_name"
        android:inputType="textNoSuggestions"
        android:textColorHighlight="@color/coloraccent"
        android:paddingLeft="20sp" />

    <EditText
        android:id="@+id/edit3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/back"
        android:paddingStart="20sp"
        android:hint="@string/email_id"
        android:inputType="textPostalAddress"
        android:textColorHighlight="@color/coloraccent"
        android:paddingLeft="20sp" />

    <EditText
        android:id="@+id/edit4"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/back"
        android:paddingStart="20sp"
        android:hint="@string/phone_no"
        android:inputType="textPostalAddress"
        android:textColorHighlight="@color/coloraccent"
        android:paddingLeft="20sp" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="150sp"
        android:layout_height="70sp"
        android:layout_marginTop="50dp"
        android:text="@string/next"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textAllCaps="false"
        android:background="@drawable/button"
        android:layout_gravity="center"/>

</LinearLayout>