<?xml version = "1.0" encoding = "utf-8"?>
<LinearLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:tools = "http://schemas.android.com/tools"
    android:layout_width = "match_parent"
    android:layout_height = "match_parent"
    android:padding="20dp"
    android:background="@drawable/background"
    android:orientation = "vertical"
    tools:context = ".SecondActivity">
    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/fill_your_detail"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/colorblack"
        android:gravity="center"/>
    <EditText
        android:id="@+id/edit5"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/back"
        android:paddingStart="20sp"
        android:hint="@string/college_university"
        android:inputType="textShortMessage"
        android:textColorHighlight="@color/coloraccent"
        android:paddingLeft="20sp" />

    <EditText
        android:id="@+id/edit6"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/back"
        android:paddingStart="20sp"
        android:hint="@string/marks"
        android:inputType="textNoSuggestions"
        android:textColorHighlight="@color/coloraccent"
        android:paddingLeft="20sp" />

    <EditText
        android:id="@+id/edit7"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/back"
        android:paddingStart="20sp"
        android:hint="@string/address"
        android:inputType="textPostalAddress"
        android:textColorHighlight="@color/coloraccent"
        android:paddingLeft="20sp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:entries="@array/state"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/back"/>

    <Button
        android:id="@+id/btn2"
        android:layout_width="150sp"
        android:layout_height="70sp"
        android:layout_marginTop="50dp"
        android:text="@string/submit"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textAllCaps="false"
        android:background="@drawable/button"
        android:layout_gravity="center"/>
</LinearLayout>